--- a/package.json
+++ b/package.json
@@ -82,6 +82,9 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^22",
     "@types/qrcode": "^1.5.5",
@@ -91,6 +94,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.4",
     "postcss": "^8.5",
     "prettier": "^3.2.5",
     "supabase": "^1.142.2",
